fixed problem with animation not showing when many results

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ p {
 
 #animated-bg {
   grid-area: overlap;
+  height: 100%;
+  width: 100vw;
 }
 
 #search-container {
